# Masking_OpenCV

./: CMakeLists.txt  README.md  main.cpp
